# cortex-m-log

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: dummy.rs  itm.rs  lib.rs  log.rs  modes.rs  semihosting.rs
src/destination/: dummy.rs  itm.rs  mod.rs  semihosting.rs
src/printer/: dummy.rs  generic.rs  itm.rs  mod.rs  semihosting.rs
