[package]
name = "cortex-m-log"
version = "0.8.0"
authors = ["Douman <douman@gmx.se>"]
keywords = ["arm", "cortex-m", "stm32", "log"]
categories = ["no-std", "embedded"]
description = "Logging facilities for Cortex-M processors"
readme = "README.md"
repository = "https://github.com/DoumanAsh/cortex-m-log"
license = "Apache-2.0"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
cortex-m = "0.7"

[dependencies.log]
version = "0.4"
optional = true
default-features = false

[dependencies.cortex-m-semihosting]
version = "0.5"
optional = true

[features]
semihosting = ["cortex-m-semihosting"]
log-integration = ["log"]
itm = []

[package.metadata.docs.rs]
features = ["semihosting", "log-integration", "itm"]
